# telia-ripper

./: .env.example  .gitignore  CLAUDE.md  GROK.md  README.md  pyproject.toml  telia_ripper.py
fixtures/: example_cdrm_project_response.json  example_go3_play_response.json  example_play_response_1.json  example_play_response_2.json  example_play_response_3.json
